--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   share_plus: ^6.3.1
+  flutter_email_sender: ^5.2.0
+  provider: ^6.0.5
+  flutter_form_builder: ^7.8.0
+  pdf: ^3.10.1
+  path_provider: ^2.0.14
 
 dev_dependencies:
   flutter_test:
