--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flutter_form_builder: ^7.8.0
   pdf: ^3.10.1
   path_provider: ^2.0.14
+  image_picker: ^0.8.7+2
+  http: ^0.13.5
+  device_info_plus: ^8.2.0
 
 dev_dependencies:
   flutter_test:
