--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   image_picker: ^0.8.7+2
   http: ^0.13.5
   device_info_plus: ^8.2.0
+  shared_preferences: ^2.1.0
+  scrollable_positioned_list: ^0.3.5
 
 dev_dependencies:
   flutter_test:
