--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,17 +35,22 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  share_plus: ^6.3.1
-  flutter_email_sender: ^5.2.0
   provider: ^6.0.5
   flutter_form_builder: ^7.8.0
   pdf: ^3.10.1
   path_provider: ^2.0.14
-  image_picker: ^0.8.7+2
   http: ^0.13.5
-  device_info_plus: ^8.2.0
   shared_preferences: ^2.1.0
   scrollable_positioned_list: ^0.3.5
+  signature: ^5.3.2
+  firebase_storage: ^11.1.1
+  firebase_core: ^2.10.0
+  flutter_image_compress: ^1.1.3
+  permission_handler: ^10.2.0
+  image_gallery_saver: ^1.7.1
+  image_picker: ^0.8.7+3
+
+
 
 dev_dependencies:
   flutter_test:
