--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   permission_handler: ^10.2.0
   image_gallery_saver: ^1.7.1
   image_picker: ^0.8.7+3
+  firebase_crashlytics: ^3.3.2
+  intl: ^0.17.0
 
 
 
